--- a/.gitattributes
+++ b/.gitattributes
@@ -1,3 +1,7 @@
+*.cs linguist-language=C#
+*.csproj linguist-language=C#
+
+
 ###############################################################################
 # Set default behavior to automatically normalize line endings.
 ###############################################################################
